--- a/src/app/components/cabbingo-stats/cabbingo-stats.html
+++ b/src/app/components/cabbingo-stats/cabbingo-stats.html
@@ -25,7 +25,7 @@
     <div class="osrs-border p-1 col-8">
         @let team = teams[currentTeam];
         <div class="d-flex flex-column justify-content-between align-items-center gap-5">
-            <div class="d-flex flex-column justify-content-between align-items-center gap-4 w-100">
+            <div class="d-flex flex-column justify-content-between align-items-center gap-2 w-100">
                 <div class="stats-outline w-100">
                     <div class="d-flex flex-column justify-content-center align-items-center stats-item px-5">
                         <h3 style="color:#FF9933;" class="d-flex justify-content-center p-0 m-0">
@@ -43,7 +43,7 @@
                                 <img src="assets/mvp.png" height="25" class="me-2" /> Team MVP
                             </h3>
                             <h3 class="d-flex justify-content-center p-0 m-0">
-                                {{ team.mvp || 'Not found' }}
+                                {{ getTeamMvp() || 'Not found' }}
                             </h3>
                         </div>
                     </div>
